feat: added auth-token generator
