# docs/collections/api-specification.json
@@ -68,6 +68,34 @@
         ]
       }
     },
+    "/user/generate-token/{id}": {
+      "get": {
+        "operationId": "UserController_generateToken",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/auth/google": {
       "get": {
         "operationId": "GoogleAuthController_login",
